tests/baselines/reference/getterMissingReturnError.errors.txt
getterMissingReturnError.ts(2,16): error TS2378: A 'get' accessor must return a value.


==== getterMissingReturnError.ts (1 errors) ====
    class test {
        public get p2(){
                   ~~
!!! error TS2378: A 'get' accessor must return a value.
    
        }
    }
    